feat(read): 事务、隔离、并发

--- a/个人/2022总结.md
+++ b/个人/2022总结.md
@@ -9,6 +9,6 @@
 - 多储蓄：养老只能靠自己，不要相信任何的政策、承诺，毕竟你的未来有几十年，而政策、承诺因时而异
 - 婚姻和育儿：婚姻和育儿是人生最大的事情之一，婚姻要慎重，育儿要慎之又慎
 
-&#8195;&#8195;牢骚发了一遍，该写一下接下来的一些想法了。工作上，接下来可能会有一些变动，希望能比较顺利的度过变动期；学习上，多学习底层知识，要深入到系统底层实现，并总结出文档；要多学习其他岗位的知识，了解各个细分行业（广告、游戏、金融、电商）的基本操作、概念以及声明周期、实现方法，并总结出文档。
+&#8195;&#8195;牢骚发了一遍，该写一下接下来的一些想法了。工作上，接下来可能会有一些变动，希望能比较顺利的度过变动期；学习上，多学习底层知识，要深入到系统底层实现，并总结出文档；要多学习其他岗位的知识，了解各个细分行业（广告、游戏、金融、电商）的基本操作、概念以及生命周期、实现方法，并总结出文档。有机会的话，考一些证，比如金融等行业的证件，多了解银行、政府等职位要求。
 
 &#8195;&#8195;希望我们都有光明的未来。
