--- a/个人/2023.7.md
+++ b/个人/2023.7.md
@@ -10,4 +10,4 @@
 
 &#8195;&#8195;那除了当前的工作，还能去做什么呢？转岗位去当产品经理、测试、技术支持、数据分析是相对容易的（并不是说这些岗位工作轻松）；考公？去国企？去外企？这些都是可以的选择，说到底，就算我失业了，那大概率也能找份工作混口饭吃。
 
-&#8195;&#8195;零零碎碎，就这些吧。我们都有光明的未来
+&#8195;&#8195;零零碎碎，就这些吧。希望我们都有光明的未来
