--- a/阅读/史铁生.md
+++ b/阅读/史铁生.md
@@ -11,7 +11,7 @@
 <img src="./source/地坛公园.png" alt="地坛公园" style="width:500px"/>
 </p>
 
-&#8195;&#8195;在遇到史铁生之前，我从未认真思考过：一个自小能跑能跳人，在满怀雄心壮志的青年，被残酷的命运拦腰折断，会是怎样的心情。2019年我第一次去北京，在回程的最后一天早上，做地铁去了一趟地坛公园。2019年的地坛没有以前史铁生影像里的那般荒芜，所有的泥土都覆满青草，几十年上百年的大树也还在透着绿意，不怕生人的鸟也在树林间跑来爬去。公园很大，绿意遍布所有的小道和分叉。我漫步在公园的每条小道上，总是不自觉的他写的话。我走过的每到小路，史铁生的轮椅也都轧过。
+&#8195;&#8195;在遇到史铁生之前，我从未认真思考过：一个自小能跑能跳人，在满怀雄心壮志的青年，被残酷的命运拦腰折断，会是怎样的心情。2019年我第一次去北京，在回程的最后一天早上，做地铁去了一趟地坛公园。2019年的地坛没有以前史铁生影像里的那般荒芜，所有的泥土都覆满青草，几十年上百年的大树也还在透着绿意，不怕生人的鸟也在树林间跑来爬去。公园很大，绿意遍布所有的小道和分叉。我漫步在公园的每条小道上，总是不自觉的想起他写过的文字。我走过的每到小路，史铁生的轮椅也都轧过。
 
 
 &#8195;&#8195;为什么会喜欢史铁生呢？大概是因为大部分人类总是能从同类的痛苦中获得安慰。难道上天在摧残人类的过程中也能获得快乐？
