--- a/个人/2023总结.md
+++ b/个人/2023总结.md
@@ -13,8 +13,7 @@
 
 
 &#8195;&#8195;今天是2024.1.7，在此写一下接下来一年的一些思考：
-1. 希望能在新部门比较好的完成工作。
-   <!-- 不求很好的得到老板的肯定，但是提的需求希望能够比较好的完成。不希望为了卷而卷，不希望为了所谓的好绩效失去生活的时间和热情。 -->
+1. 希望能在新部门比较好的完成工作。不求很好的得到老板的肯定，但是提的需求希望能够比较好的完成。不希望为了卷而卷，不希望为了所谓的好绩效失去生活的时间和热情。
 2. 调研下其他行业对计算机的招聘条件、就业规模、待遇、稳定性，如果有合适的计划，咨询下这些行业中的朋友、亲人，再做下一步的决策。
 3. 希望多学习数据库和AI相关的知识，了解这些领域的专业原理、工具、使用方法，最好还是亲自动手写一些小作品。
 4. 保持锻炼，保持健康的体魄。
