--- a/个人/2024.6总结.md
+++ b/个人/2024.6总结.md
@@ -1,6 +1,6 @@
 &#8195;&#8195;4年半了，在这个时间，选择了离职。
 
-&#8195;&#8195;离职的原因，一部分是因为累和卷，身心疲惫，不是很喜欢这个没有边界的氛围。23年的10月份，我转岗到Tiktok国际电商，做备货计划相关的项目。计划24年1月份来了个新老板，他base上海，因此如果有大一点的项目、需求，就得要到上海去，基本上一待就是两周、三周。24年2月份，新来的同事进行了一次系统重构，给系统带来了很多问题，接下来半年出现很多次故障。（我没有很强硬的坚持自己的反对观点，有责任。）24年的4月份，开始了为期两个月的珠海封闭开发。珠海横琴创新方挺偏僻的，人少，都是打工人。出差住在酒店，没啥生活界限，下班了也还是干活，晚上十一二点，同事还在群里@人。总的来说，新过来的BH从外部人的视角，对系统提出并做了很多修复、改造，做的很好。
+&#8195;&#8195;离职的原因，一部分是因为累和卷，身心疲惫，不是很喜欢这个没有边界的氛围。23年的10月份，我转岗到Tiktok国际电商，做备货计划相关的项目。计划24年1月份来了个新老板，他base上海，因此如果有大一点的项目、需求，就得要到上海去，基本上一待就是两周、三周。24年2月份，新来的同事进行了一次系统重构，给系统带来了很多问题，接下来半年出现很多次故障。（我没有很强硬的坚持自己的反对观点，有责任。）24年的4月份，开始了为期两个月的珠海封闭开发。珠海横琴创新方挺偏僻的，人少，都是打工人。出差住在酒店，没啥生活界限，下班了也还是干活，晚上十一二点，同事还在群里@人。总的来说，新过来的BH从工程的视角，对系统提出并做了很多修复、改造，做的很好。
 
 &#8195;&#8195;我在电商的半年，也让我明确地认知到：我对于电商没有任何激情（不确定是团队导致的还是业务形态导致的）。我以后会再重试电商行业吗？大概率不会。
 
